# ifc2mesh

./: .gitignore  AGENTS.md  LICENSE  README.md  cli.py  extract_component_pcds.py  ifc2mesh.py  mesh_pcd_segment.py  mesh_pcd_segment_obb_axis.py  mesh_pcd_segment_obb_axis_v2.py  pyproject.toml  requirements.txt  run_axis_merge_and_node_fit_curve_v2.py  run_axis_merge_and_node_fit_curve_v2_0.py  run_axis_merge_and_node_fit_curve_v2_prior.py  run_axis_merge_and_node_fit_v3.py
axis_fit/: __init__.py  run_axis_merge_and_node_fit_curve_v2.py  run_axis_merge_and_node_fit_curve_v2_0.py  run_axis_merge_and_node_fit_curve_v2_prior.py  run_axis_merge_and_node_fit_v3.py
design_nodes/: __init__.py  line2point.py  view_node_deviation_open3d.py
design_nodes/dxf2ply/: __init__.py  dxf2ply.py  test_sub_junction_filtering.py
dxfline2point/: __init__.py  line2point.py  view_node_deviation_open3d.py
dxfline2point/dxf2ply/: __init__.py  dxf2ply.py  test_sub_junction_filtering.py
pipelines/: __init__.py  extract_component_pcds.py
segmentation/: __init__.py  mesh_pcd_segment_obb_axis.py  mesh_pcd_segment_obb_axis_v2.py
tests/: test_cli.py  test_module_layout.py
